--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -14,7 +14,7 @@
     </div>
     <mat-accordion>
         <mat-expansion-panel *ngFor="let item of data">
-            <mat-expansion-panel-header class="nav">
+            <mat-expansion-panel-header collapsedHeight='4.85em' expandedHeight='5em' class="nav">
                 <mat-panel-title>
                     <mat-icon>account_circle</mat-icon>
                     <span>{{item.title}}</span>
