--- a/src/app/message-window/message-window.component.html
+++ b/src/app/message-window/message-window.component.html
@@ -1,14 +1,1 @@
-<div class="message-window">
-    <mat-grid-list cols="24" rowHeight={{height}}>
-        <mat-grid-tile [colspan]='8' class="message-window-left">
-            <div style='width:100%;'>
-                <messages-component (onItemClick) = "onItemClick($event)"></messages-component>
-            </div>
-        </mat-grid-tile>
-        <mat-grid-tile [colspan]='16' class="message-window-right">
-            <div style='width:100%;'>
-                <message-component [detailID]="SelectedID"></message-component>
-            </div>
-        </mat-grid-tile>
-    </mat-grid-list>
-</div>
+<messages-component ></messages-component>
