--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -1,7 +1,7 @@
 <div [style.height]='height' class="message-box">
     <div class="chat-list scroll">
         <div>
-            <div *ngFor="let item of list" class="{{item.use}}">
+            <div *ngFor="let item of detailData | async" class="{{item.use}}">
                 <p>
                     {{item.text}}
                 </p>
