--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,24 +1,38 @@
-<div class="messages" [style.height]='height'>
-    <div class="search">
-        <mat-icon class="search-ico">ic_search</mat-icon>
-        <mat-form-field class="center">
-            <input matInput placeholder="Search">
-        </mat-form-field>
-        <mat-icon class="search-ico two">ic_create</mat-icon>
-    </div>
-    <div class="messages-list scroll">
-        <button mat-button *ngFor="let item of data" (click)='onClick(item.id)'>
-            <img src='{{item.ico}}' alt="">
-            <div class='chat'>
-                <p class='chat-name'>
-                    <b>{{item.name}}</b>
-                </p>
-                <p class='chat-time'>
-                    <span>{{item.title}}</span>
-                    <span>{{item.time}}</span>
-                </p>
-            </div>
-        </button>
+<div class="message-window">
+    <mat-grid-list cols="24" rowHeight={{height}}>
+        <mat-grid-tile [colspan]='8' class="message-window-left">
+            <div style='width:100%;'>
 
-    </div>
+                <div class="messages" [style.height]='height'>
+                    <div class="search">
+                        <mat-icon class="search-ico">ic_search</mat-icon>
+                        <mat-form-field class="center">
+                            <input matInput placeholder="Search">
+                        </mat-form-field>
+                        <mat-icon class="search-ico two">ic_create</mat-icon>
+                    </div>
+                    <div class="messages-list scroll">
+                        <button mat-button *ngFor="let item of data" (click)='onClick(item.id)'>
+                            <img src='{{item.ico}}' alt="">
+                            <div class='chat'>
+                                <p class='chat-name'>
+                                    <b>{{item.name}}</b>
+                                </p>
+                                <p class='chat-time'>
+                                    <span>{{item.title}}</span>
+                                    <span>{{item.time}}</span>
+                                </p>
+                            </div>
+                        </button>
+
+                    </div>
+                </div>
+            </div>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]='16' class="message-window-right">
+            <div style='width:100%;'>
+                <message-component [detailData]="obs$"></message-component>
+            </div>
+        </mat-grid-tile>
+    </mat-grid-list>
 </div>
