1. buy window component copied and renamed to sell window, same for the internal components 2. Also Copy the messages window components (cols 1,2 and 3) to a new window called customers

--- a/src/app/window-customers/window-customers.component.html
+++ b/src/app/window-customers/window-customers.component.html
@@ -31,7 +31,7 @@
         </mat-grid-tile>
         <mat-grid-tile [colspan]='16' class="message-window-right">
             <div style='width:100%;'>
-                <message-component [detailData]="obs$"></message-component>
+                <customer [detailData]="obs$"></customer>
             </div>
         </mat-grid-tile>
     </mat-grid-list>
