--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -1,7 +1,7 @@
 <div class="window">
     <mat-grid-list cols="10" rowHeight={{height}}>
         <mat-grid-tile [colspan]='2' class="window-left" style.height="{{height}}">
-            <menu-component></menu-component>
+            <menu></menu>
             <company-news></company-news>
         </mat-grid-tile>
         <mat-grid-tile [colspan]='8' class="window-right" style.height="{{height}}">
